# termrender

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: publish.yml
scripts/: build-mermaid-ascii.sh
src/termrender/: CLAUDE.md  __main__.py  _mermaid_bin.py  blocks.py  emit.py  layout.py  parser.py  style.py
src/termrender/renderers/: CLAUDE.md  borders.py  charts.py  code.py  diff.py  mermaid.py  panel.py  stat.py  table.py  text.py  timeline.py
tests/: test_charts.py  test_cli_contract.py  test_column_alignment.py  test_diff.py  test_inline_badge.py  test_linebreak.py  test_myst_gaps.py  test_stat.py  test_tasklist.py  test_timeline.py  test_variable_colons.py
