[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "termrender"
dynamic = ["version"]
description = "Rich terminal rendering of directive-flavored markdown"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Silas Rhyneer" },
]
keywords = ["terminal", "markdown", "ansi", "cli", "rendering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Terminals",
]
dependencies = [
    "mistune>=3.0",
    "mermaid-ascii>=1.2",
    "pygments>=2.0",
]

[project.urls]
Homepage = "https://github.com/CaptainCrouton89/termrender"
Repository = "https://github.com/CaptainCrouton89/termrender"
Issues = "https://github.com/CaptainCrouton89/termrender/issues"

[project.scripts]
termrender = "termrender.__main__:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/termrender"]
# Ship the vendored mermaid-ascii binary (built from pinned upstream master;
# see scripts/build-mermaid-ascii.sh). It lives inside the package dir so the
# default file selection includes it; artifacts ensures it survives even if
# VCS-ignored, and hatchling preserves its 0o755 exec bit.
artifacts = ["src/termrender/_bin/*"]

[tool.semantic_release]
version_toml = []
version_variables = []
commit_author = "github-actions[bot] <github-actions[bot]@users.noreply.github.com>"
tag_format = "v{version}"

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "refactor", "style", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
